# vdb_to_numpy

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py
apps/: mesh_to_sdf.py  scale_meshes.py  visualize_leaf_nodes.py  visualize_shapenet_models.sh  visualize_vdb.py
docker/apps/: Dockerfile
docker/builder/: Dockerfile
experiments/: extract_viewpoint_from_clipboard.py  open3d_jupyter_draw_geometries.py  scale_mesh.ipynb
src/vdb_to_numpy/: __init__.py
src/vdb_to_numpy/grid_wrappers/: __init__.py  blend_grids.py  leaf_node_grid.py  marching_cubes.py
src/vdb_to_numpy/pybind/: BlendGrids.hpp  CMakeLists.txt  MarchingCubes.cpp  MarchingCubes.h  MarchingCubesConst.h  __init__.py  vdb_pybind.cpp  vdb_pybind.hpp
src/vdb_to_numpy/utils/: __init__.py  mesh_processing.py  mesher.py  serialization.py
src/vdb_to_numpy/vdb_tools/: __init__.py  vdb_tools.py
src/vdb_to_numpy/visualization/: visualizer.py
tests/: manual_test.py  test_data.py  test_installation.py  test_leaf_node_grid.py  test_scaling.py
utils/: download_test_data.py  install_jupyter_hook.sh  jupyter_strip_output.py
