[metadata]
name = vdb_to_numpy
author = Ignacio Martin Vizzo (aka Nacho) and Cyrill Stachniss
author_email = ignaciovizzo@gmail.com
license_files = LICENSE.txt
description = Convert VDB grids to Numpy arrays
long_description = file:README.md
long_description_content_type = text/markdown
version = 0.1
keywords = VDB, SLAM, LiDAR, Odometry, Localization, Mapping,

[options]
packages = find:
install_requires =
    numpy
    open3d
    scikit_image

[flake8]
max-line-length = 80
extend-ignore = E203
